Fix sizing and alignment on items show page

--- a/css/gt3-css.css
+++ b/css/gt3-css.css
@@ -1102,3 +1102,8 @@ I.svg-magglass {
 #docsviewer_viewer h2 {
   display: none !important;
 }
+
+#docsviewer_viewer iframe {
+  height: 600px;
+  width: 90%;
+}
